force-app/main/default/objects/CanvasCourse__c/CanvasCourse__c.object-meta.xml
<CustomObject>
    <label>Canvas Course</label>
    <nameField>
        <label>Course Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canvas Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>