force-app/main/default/objects/CanvasCourse__c/fields/BlueprintCanvasCourseId__c.field-meta.xml
<CustomField>
    <fullName>BlueprintCanvasCourseId__c</fullName>
    <label>Blueprint Canvas Course ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>