force-app/main/default/objects/CanvasCourse__c/fields/CanvasCourseId__c.field-meta.xml
<CustomField>
    <fullName>CanvasCourseId__c</fullName>
    <externalId>true</externalId>
    <label>Canvas Course ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>