force-app/main/default/objects/CanvasCourse__c/fields/CanvasCourseLink__c.field-meta.xml
<CustomField>
    <fullName>CanvasCourseLink__c</fullName>
    <formula>IF(CanvasCourseId__c &gt; 0, HYPERLINK($Setup.Canvas_Settings__c.base_url__c &amp; &#39;courses/&#39; &amp; TEXT(CanvasCourseId__c),  Title__c ), null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canvas Course Link</label>
    <type>Text</type>
</CustomField>