force-app/main/default/objects/CanvasCourse__c/fields/CanvasSubAccountId__c.field-meta.xml
<CustomField>
    <fullName>CanvasSubAccountId__c</fullName>
    <defaultValue>$Setup.Canvas_Settings__c.sub_account_id__c</defaultValue>
    <externalId>true</externalId>
    <inlineHelpText>When creating a new course, defaults to the account defined in Custom Settings/Canvas API Settings, but another account id may be entered (subject to accounts available to the Canvas token being used).</inlineHelpText>
    <label>Canvas Sub Account ID</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>