force-app/main/default/objects/CanvasCourse__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Site Available Until</label>
    <type>DateTime</type>
</CustomField>