force-app/main/default/objects/CanvasCourse__c/fields/SisId__c.field-meta.xml
<CustomField>
    <fullName>SisId__c</fullName>
    <displayFormat>SF-HUIT-AT-{0000}</displayFormat>
    <label>SIS ID</label>
    <type>AutoNumber</type>
</CustomField>