force-app/main/default/objects/CanvasCourse__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Site Available From</label>
    <type>DateTime</type>
</CustomField>