force-app/main/default/objects/CanvasCourse__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Default Term</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2017</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>2017 Interval 1</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>2017 Interval 2</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>2017 Interval 3</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>2017 Interval 4</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>2017 Interval 5</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>2017 Interval 6</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>2017 Interval 7</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>2017 Interval 8</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>2017 Interval 9</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>2017 Interval 10</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>2017 Interval 11</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>2017 Interval 12</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>2018</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>2018 Interval 1</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>2018 Interval 2</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>2018 Interval 3</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>2018 Interval 4</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>2018 Interval 5</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>2018 Interval 6</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>2018 Interval 7</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>2018 Interval 8</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>2018 Interval 9</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>2018 Interval 10</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>2018 Interval 11</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>2018 Interval 12</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>2019</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>2019 Interval 1</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>2019 Interval 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>