force-app/main/default/objects/CanvasCourse__c/validationRules/End_date_must_be_after_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_must_be_after_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>DATETIMEVALUE(End_Date__c) &lt; DATETIMEVALUE(Start_Date__c)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Course end date must be after course start date</errorMessage>
</ValidationRule>